PM: hibernate: Add stub for pm_hibernate_is_recovering() (bsc#1243112).

--- a/series.conf
+++ b/series.conf
@@ -54983,6 +54983,7 @@
 	patches.suse/drm-amd-pm-powerplay-hwmgr-smu_helper-fix-order-of-m.patch
 	patches.suse/PM-hibernate-add-new-api-pm_hibernate_is_recovering.patch
 	patches.suse/drm-amdgpu-do-not-resume-device-in-thaw-for-normal-h.patch
+	patches.suse/PM-hibernate-Add-stub-for-pm_hibernate_is_recovering.patch
 	patches.suse/drm-amdgpu-gfx9-fix-kiq-locking-in-KCQ-reset.patch
 	patches.suse/drm-amdgpu-gfx9.4.3-fix-kiq-locking-in-KCQ-reset.patch
 	patches.suse/drm-amdgpu-gfx10-fix-kiq-locking-in-KCQ-reset.patch
