--- a/series.conf
+++ b/series.conf
@@ -55655,6 +55655,7 @@
 	patches.suse/PM-devfreq-mtk-cci-Fix-potential-error-pointer-deref.patch
 	patches.suse/PM-sleep-core-Clear-power.must_resume-in-noirq-suspe.patch
 	patches.suse/PM-hibernate-Add-pm_hibernation_mode_is_suspend.patch
+	patches.suse/drm-amd-Fix-hybrid-sleep.patch
 	patches.suse/ACPI-debug-fix-signedness-issues-in-read-write-helpe.patch
 	patches.suse/ACPICA-Fix-largest-possible-resource-descriptor-inde.patch
 	patches.suse/ACPI-processor-idle-Fix-memory-leak-when-register-cp.patch
