--- a/series.conf
+++ b/series.conf
@@ -11318,6 +11318,7 @@
 	patches.suse/drm-amdgpu-gfx10-fix-KGQ-reset-sequence.patch
 	patches.suse/drm-amd-pm-powerplay-hwmgr-smu_helper-fix-order-of-m.patch
 	patches.suse/PM-hibernate-add-new-api-pm_hibernate_is_recovering.patch
+	patches.suse/drm-amdgpu-do-not-resume-device-in-thaw-for-normal-h.patch
 	patches.suse/drm-amdgpu-gfx9-fix-kiq-locking-in-KCQ-reset.patch
 	patches.suse/drm-amdgpu-gfx9.4.3-fix-kiq-locking-in-KCQ-reset.patch
 	patches.suse/drm-amdgpu-gfx10-fix-kiq-locking-in-KCQ-reset.patch
