drm/amdgpu: Avoid rma causes GPU duplicate reset (bsc#1243112).

--- a/series.conf
+++ b/series.conf
@@ -55687,6 +55687,7 @@
 	patches.suse/drm-panel-novatek-nt35560-Fix-invalid-return-value.patch
 	patches.suse/drm-bridge-it6505-select-REGMAP_I2C.patch
 	patches.suse/drm-amd-Restore-cached-manual-clock-settings-during-.patch
+	patches.suse/drm-amdgpu-Avoid-rma-causes-GPU-duplicate-reset.patch
 	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
 	patches.suse/drm-amd-display-Remove-redundant-semicolons.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
