--- a/blacklist.conf
+++ b/blacklist.conf
@@ -546,3 +546,5 @@ d613f53c83ec47089c4e25859d5e8e0359f6f8da # CVE-2025-39883 https://bugzilla.suse.
 6deeefb820d0efb0b36753622fb982d03b37b3ad # amdgpu: causing s2idle regression (bsc#1243112)
 74792608606a525a0e0df7e8d48acd8000561389 # cleanup, no code change
 a02b0cde8ee515ee0c8efd33e7fbe6830c282e69 # Fix for scripts/gdb
+46e15197b513e60786a44107759d6ca293d6288c # amdgpu: bogus stable 6.12.y backport
+b47a1f9323c2085940599fb292902f27cf2247a1 # amdgpu: bogus stable 6.12.y backport
