--- a/blacklist.conf
+++ b/blacklist.conf
@@ -273,6 +273,8 @@ d8b3dfd4d36c22ffb31be08f3f17f759feff0c66 # drm/xe: reverting the above
 024771f3fb75dc817e9429d5763f1a6eb84b6f21 # amdgpu: reverted
 88c7c56d07c108ed4de319c8dba44aa4b8a38dd1 # amdgpu: cherry-picked
 a5d258a00b41143d9c64880eed35799d093c4782 # amdgpu: reverting the above
+46e15197b513e60786a44107759d6ca293d6288c # amdgpu: bogus stable 6.12.y backport
+b47a1f9323c2085940599fb292902f27cf2247a1 # amdgpu: bogus stable 6.12.y backport
 
 # SLE15-SP6
 adfbae9ffe339eed08d54a4eb87c93f4b35f214b # drm/i915: cherry-picked d1691bb22eba23a0131f1bde41d268bb0ebb0f59
