--- a/series.conf
+++ b/series.conf
@@ -12230,6 +12230,7 @@
 	patches.suse/drm-amd-Restore-cached-manual-clock-settings-during-.patch
 	patches.suse/drm-amdgpu-Avoid-rma-causes-GPU-duplicate-reset.patch
 	patches.suse/drm-amd-display-fix-dmub-access-race-condition.patch
+	patches.suse/drm-amd-display-more-liberal-vmin-vmax-update-for-fr.patch
 	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
 	patches.suse/drm-amd-display-Remove-redundant-semicolons.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
