--- a/series.conf
+++ b/series.conf
@@ -12229,6 +12229,7 @@
 	patches.suse/drm-bridge-it6505-select-REGMAP_I2C.patch
 	patches.suse/drm-amd-Restore-cached-manual-clock-settings-during-.patch
 	patches.suse/drm-amdgpu-Avoid-rma-causes-GPU-duplicate-reset.patch
+	patches.suse/drm-amdgpu-fix-link-error-for-PM_SLEEP.patch
 	patches.suse/drm-amd-display-fix-dmub-access-race-condition.patch
 	patches.suse/drm-amd-display-more-liberal-vmin-vmax-update-for-fr.patch
 	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
