--- a/series.conf
+++ b/series.conf
@@ -55690,6 +55690,7 @@
 	patches.suse/drm-amdgpu-fix-link-error-for-PM_SLEEP.patch
 	patches.suse/drm-amd-display-fix-dmub-access-race-condition.patch
 	patches.suse/drm-amd-display-more-liberal-vmin-vmax-update-for-fr.patch
+	patches.suse/drm-amd-display-Fix-vupdate_offload_work-doc.patch
 	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
 	patches.suse/drm-amd-display-Remove-redundant-semicolons.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
