net: sysfs: Fix /sys/class/net/<iface> path (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -21390,6 +21390,7 @@
 	patches.suse/pds_core-Use-struct-pdsc-for-the-pdsc_adminq_isr-pri.patch
 	patches.suse/pds_core-Prevent-race-issues-involving-the-adminq.patch
 	patches.suse/octeontx2-pf-Remove-xdp-queues-on-program-detach.patch
+	patches.suse/net-sysfs-Fix-sys-class-net-iface-path.patch
 	patches.suse/xen-netback-properly-sync-TX-responses.patch
 	patches.suse/msft-hv-2940-hv_netvsc-Fix-race-condition-between-netvsc_probe-an.patch
 	patches.suse/mptcp-fix-data-re-injection-from-stale-subflow.patch
