--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1192,3 +1192,4 @@ e500d497c16c29304907f5de8bc79a8d4904c3e9 # spelling only
 a409fc1463d664002ea9bf700ae4674df03de111 # build stuff only
 cb7380de9e4cbc9a24216b722ec50e092ae83036 # pure cleanup
 bfcf4004bcbce2cb674b4e8dbd31ce0891766bac # cleanup breaking kABI
+7b6fb3050d8f5e2b6858eef344e47ac1f5442827 # compile fix
