--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1193,3 +1193,4 @@ a409fc1463d664002ea9bf700ae4674df03de111 # build stuff only
 cb7380de9e4cbc9a24216b722ec50e092ae83036 # pure cleanup
 bfcf4004bcbce2cb674b4e8dbd31ce0891766bac # cleanup breaking kABI
 7b6fb3050d8f5e2b6858eef344e47ac1f5442827 # compile fix
+f9b2c87105c989a7b259c6da87673ada96dce2f8 # clang only
