--- a/series.conf
+++ b/series.conf
@@ -11937,6 +11937,7 @@
 	patches.suse/sched-deadline-Fix-RT-task-potential-starvation-when.patch
 	patches.suse/sched-deadline-Don-t-count-nr_running-for-dl_server-.patch
 	patches.suse/x86-microcode-AMD-Handle-the-case-of-no-BIOS-microcode.patch
+	patches.suse/x86-bugs-Add-attack-vector-controls-for-SSB.patch
 	patches.suse/btrfs-fix-race-between-logging-inode-and-checking-if.patch
 	patches.suse/btrfs-fix-race-between-setting-last_dir_index_offset.patch
 	patches.suse/btrfs-avoid-load-store-tearing-races-when-checking-i.patch
