x86/bugs: Fix GDS mitigation selecting when mitigation is off (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11862,6 +11862,7 @@
 	patches.suse/iio-light-as73211-Ensure-buffer-holes-are-zeroed.patch
 	patches.suse/iio-pressure-bmp280-Use-IS_ERR-in-bmp280_common_prob.patch
 	patches.suse/x86-cpu-hygon-Add-missing-resctrl_cpu_detect-in-bsp_i.patch
+	patches.suse/x86-bugs-Fix-GDS-mitigation-selecting-when-mitigation-is-o.patch
 	patches.suse/pinctrl-STMFX-add-missing-HAS_IOMEM-dependency.patch
 	patches.suse/of-dynamic-Fix-memleak-when-of_pci_add_properties-fa.patch
 	patches.suse/of-dynamic-Fix-use-after-free-in-of_changeset_add_pr.patch
