--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1194,3 +1194,4 @@ cb7380de9e4cbc9a24216b722ec50e092ae83036 # pure cleanup
 bfcf4004bcbce2cb674b4e8dbd31ce0891766bac # cleanup breaking kABI
 7b6fb3050d8f5e2b6858eef344e47ac1f5442827 # compile fix
 f9b2c87105c989a7b259c6da87673ada96dce2f8 # clang only
+61ec586bc0815959d3314cf7ce242529c977b357 # clang only
