--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1196,3 +1196,4 @@ bfcf4004bcbce2cb674b4e8dbd31ce0891766bac # cleanup breaking kABI
 f9b2c87105c989a7b259c6da87673ada96dce2f8 # clang only
 61ec586bc0815959d3314cf7ce242529c977b357 # clang only
 7838b4656110d950afdd92a081cc0f33e23e0ea8 # optimization breaking kABI in an unfixable manner
+2807c54b3809ca5e51e5a9dfa5e9ddb8993a0e6f # cleanup breaking kABI
