--- a/series.conf
+++ b/series.conf
@@ -55704,6 +55704,7 @@
 	patches.suse/drm-amd-pm-Disable-MCLK-switching-with-non-DC-at-120.patch
 	patches.suse/drm-amd-pm-Disable-SCLK-switching-on-Oland-with-high.patch
 	patches.suse/drm-amd-amdgpu-Implement-MES-suspend-resume-gang-fun.patch
+	patches.suse/drm-amdgpu-mes-add-front-end-for-detect-and-reset-hu.patch
 	patches.suse/drm-amdkfd-Fix-error-code-sign-for-EINVAL-in-svm_ioc.patch
 	patches.suse/drm-msm-dpu-fix-incorrect-type-for-ret.patch
 	patches.suse/drm-amdgpu-Fix-allocating-extra-dwords-for-rings-v2.patch
