--- a/series.conf
+++ b/series.conf
@@ -12236,6 +12236,7 @@
 	patches.suse/drm-amd-display-Add-NULL-check-for-stream-before-der.patch
 	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
 	patches.suse/drm-amd-display-Remove-redundant-semicolons.patch
+	patches.suse/drm-amdgpu-vpe-cancel-delayed-work-in-hw_fini.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
 	patches.suse/drm-amdgpu-Power-up-UVD-3-for-FW-validation-v2.patch
 	patches.suse/drm-amd-pm-Disable-ULV-even-if-unsupported-v3.patch
