--- a/series.conf
+++ b/series.conf
@@ -12248,6 +12248,7 @@
 	patches.suse/drm-amd-amdgpu-Implement-MES-suspend-resume-gang-fun.patch
 	patches.suse/drm-amdgpu-mes-add-front-end-for-detect-and-reset-hu.patch
 	patches.suse/drm-amdgpu-mes11-implement-detect-and-reset-callback.patch
+	patches.suse/drm-amdgpu-mes12-implement-detect-and-reset-callback.patch
 	patches.suse/drm-amdkfd-Fix-error-code-sign-for-EINVAL-in-svm_ioc.patch
 	patches.suse/drm-msm-dpu-fix-incorrect-type-for-ret.patch
 	patches.suse/drm-amdgpu-Fix-allocating-extra-dwords-for-rings-v2.patch
