--- a/series.conf
+++ b/series.conf
@@ -12458,6 +12458,7 @@
 	patches.suse/drm-amdkfd-Fix-mmap-write-lock-not-release.patch
 	patches.suse/drm-amd-Check-whether-secure-display-TA-loaded-succe.patch
 	patches.suse/drm-amdgpu-Report-individual-reset-error.patch
+	patches.suse/drm-amd-display-Enable-Dynamic-DTBCLK-Switch.patch
 	patches.suse/rtc-x1205-Fix-Xicor-X1205-vendor-prefix.patch
 	patches.suse/rtc-optee-fix-memory-leak-on-driver-removal.patch
 
