drm/amdkfd: Fix mmap write lock not release (bsc#1243112).

--- a/series.conf
+++ b/series.conf
@@ -12455,6 +12455,7 @@
 	patches.suse/drm-amd-display-Properly-disable-scaling-on-DCE6.patch
 	patches.suse/drm-amd-display-Disable-scaling-on-DCE6-for-now.patch
 	patches.suse/drm-amdgpu-Fix-for-GPU-reset-being-blocked-by-KIQ-I-.patch
+	patches.suse/drm-amdkfd-Fix-mmap-write-lock-not-release.patch
 	patches.suse/rtc-x1205-Fix-Xicor-X1205-vendor-prefix.patch
 	patches.suse/rtc-optee-fix-memory-leak-on-driver-removal.patch
 
