--- a/series.conf
+++ b/series.conf
@@ -55703,6 +55703,7 @@
 	patches.suse/drm-amd-pm-Treat-zero-vblank-time-as-too-short-in-si.patch
 	patches.suse/drm-amd-pm-Disable-MCLK-switching-with-non-DC-at-120.patch
 	patches.suse/drm-amd-pm-Disable-SCLK-switching-on-Oland-with-high.patch
+	patches.suse/drm-amd-amdgpu-Implement-MES-suspend-resume-gang-fun.patch
 	patches.suse/drm-amdkfd-Fix-error-code-sign-for-EINVAL-in-svm_ioc.patch
 	patches.suse/drm-msm-dpu-fix-incorrect-type-for-ret.patch
 	patches.suse/drm-amdgpu-Fix-allocating-extra-dwords-for-rings-v2.patch
