media: solo6x10: replace max(a, min(b, c)) by clamp(b, a, c) (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -21176,6 +21176,7 @@
 	patches.suse/scsi-fnic-unlock-on-error-path-in-fnic_queuecommand.patch
 	patches.suse/scsi-core-Kick-the-requeue-list-after-inserting-when-flushing.patch
 	patches.suse/scsi-target-core-Add-TMF-to-tmr_list-handling.patch
+	patches.suse/media-solo6x10-replace-max-a-min-b-c-by-clamp-b-a-c.patch
 	patches.suse/dmaengine-apple-admac-Keep-upper-bits-of-REG_BUS_WID.patch
 	patches.suse/dmaengine-fix-NULL-pointer-in-channel-unregistration.patch
 	patches.suse/dmaengine-idxd-Move-dma_free_coherent-out-of-spinloc.patch
