--- a/series.conf
+++ b/series.conf
@@ -12240,6 +12240,7 @@
 	patches.suse/media-rc-fix-races-with-imon_disconnect.patch
 	patches.suse/media-uvcvideo-Mark-invalid-entities-with-id-UVC_INV.patch
 	patches.suse/media-b2c2-Fix-use-after-free-causing-by-irq_check_w.patch
+	patches.suse/media-i2c-tc358743-Fix-use-after-free-bugs-caused-by.patch
 	patches.suse/media-tuner-xc5000-Fix-use-after-free-in-xc5000_rele.patch
 	patches.suse/wifi-mwifiex-send-world-regulatory-domain-to-driver.patch
 	patches.suse/wifi-iwlwifi-Remove-redundant-header-files.patch
