update to 6.18-rc1
- drop 24 patches (16 stable, 7 mainline, 1 obsolete)
  - patches.kernel.org/*
  - patches.suse/Revert-crypto-testmgr-desupport-SHA-1-for-FIPS-140.patch
  - patches.suse/clk-rp1-Implement-remaining-clock-tree.patch
  - patches.suse/docs-kdoc-handle-the-obsolescensce-of-docutils.Error.patch
  - patches.suse/dt-bindings-clock-rp1-Add-missing-MIPI-DSI-defines.patch
  - patches.suse/net-cadence-macb-Add-support-for-Raspberry-Pi-RP1-et.patch
  - patches.suse/pinctrl-bcm-Add-STB-family-pin-controller-driver.patch
  - patches.suse/pinctrl-rp1-Add-regmap-ranges-to-RP1-gpio-controller.patch
  - patches.suse/bcachefs-print-message-at-mount-time-regarding-immin.patch
- refresh patches
  - patches.suse/vfs-add-super_operations-get_inode_dev
  - patches.suse/Restore-kABI-for-NVidia-vGPU-driver.patch
- new regression fixes
  - patches.suse/usb-xhci-pci-Fix-USB2-only-root-hub-registration.patch
  - patches.suse/udp-do-not-use-skb_release_head_state-before-skb_att.patch
  - disable ARM architectures (need config update)
- new config options
  - Processor type and features
    - CONFIG_AMD_SECURE_AVIC=y
    - CONFIG_BHYVE_GUEST=y
    - CONFIG_MICROCODE_DBG=n
    - CONFIG_INTEL_TDX_HOST=y
  - Virtualization
    - CONFIG_KVM_INTEL_TDX=y
  - Memory Management options
    - CONFIG_PERSISTENT_HUGE_ZERO_FOLIO=y
  - Networking support
    - CONFIG_INET_PSP=y
    - CONFIG_DIBS=m
    - CONFIG_DIBS_LO=n
    - CONFIG_SCTP_DEFAULT_COOKIE_HMAC_SHA256=y
  - File systems
    - CONFIG_SUNRPC_DEBUG_TRACE=n
  - Firmware Drivers
    - CONFIG_QCOM_TZMEM_MODE_GENERIC=y
    - CONFIG_QCOM_TZMEM_MODE_SHMBRIDGE=n
  - Misc devices
    - CONFIG_EEPROM_M24LR=m
    - CONFIG_INTEL_MEI_LB=m
  - Multiple devices driver support (RAID and LVM)
    - CONFIG_MD_LLBITMAP=n
    - CONFIG_DM_PCACHE=n
  - Network device support
    - CONFIG_NET_DSA_KS8995=m
    - CONFIG_MLX5_EN_PSP=y
    - CONFIG_PSE_SI3474=m
  - Input device support
    - CONFIG_TOUCHSCREEN_HIMAX_HX852X=m
    - CONFIG_TOUCHSCREEN_HYNITR

--- a/series.conf
+++ b/series.conf
@@ -27,22 +27,6 @@
 	# DO NOT MODIFY THEM!
 	# Send separate patches upstream if you find a problem...
 	########################################################
-	patches.kernel.org/6.17.1-001-blk-mq-fix-blk_mq_tags-double-free-while-nr_re.patch
-	patches.kernel.org/6.17.1-002-gcc-plugins-Remove-TODO_verify_il-for-GCC-16.patch
-	patches.kernel.org/6.17.1-003-scsi-target-target_core_configfs-Add-length-ch.patch
-	patches.kernel.org/6.17.1-004-ALSA-usb-audio-fix-race-condition-to-UAF-in-sn.patch
-	patches.kernel.org/6.17.1-005-wifi-rtw89-fix-use-after-free-in-rtw89_core_tx.patch
-	patches.kernel.org/6.17.1-006-media-b2c2-Fix-use-after-free-causing-by-irq_c.patch
-	patches.kernel.org/6.17.1-007-media-i2c-tc358743-Fix-use-after-free-bugs-cau.patch
-	patches.kernel.org/6.17.1-008-media-tuner-xc5000-Fix-use-after-free-in-xc500.patch
-	patches.kernel.org/6.17.1-009-media-rc-fix-races-with-imon_disconnect.patch
-	patches.kernel.org/6.17.1-010-media-uvcvideo-Mark-invalid-entities-with-id-U.patch
-	patches.kernel.org/6.17.1-011-mm-swap-check-for-stable-address-space-before-.patch
-	patches.kernel.org/6.17.1-012-wifi-ath11k-fix-NULL-dereference-in-ath11k_qmi.patch
-	patches.kernel.org/6.17.1-013-media-iris-Fix-memory-leak-by-freeing-untracke.patch
-	patches.kernel.org/6.17.1-014-media-stm32-csi-Fix-dereference-before-NULL-ch.patch
-	patches.kernel.org/6.17.1-015-ASoC-qcom-audioreach-fix-potential-null-pointe.patch
-	patches.kernel.org/6.17.1-016-Linux-6.17.1.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
@@ -72,13 +56,8 @@
 	# sorted patches
 	########################################################
 
-	patches.suse/pinctrl-rp1-Add-regmap-ranges-to-RP1-gpio-controller.patch
-	patches.suse/pinctrl-bcm-Add-STB-family-pin-controller-driver.patch
-	patches.suse/dt-bindings-clock-rp1-Add-missing-MIPI-DSI-defines.patch
-	patches.suse/clk-rp1-Implement-remaining-clock-tree.patch
-	patches.suse/net-cadence-macb-Add-support-for-Raspberry-Pi-RP1-et.patch
-	patches.suse/docs-kdoc-handle-the-obsolescensce-of-docutils.Error.patch
-	patches.suse/Revert-crypto-testmgr-desupport-SHA-1-for-FIPS-140.patch
+	# gregkh/usb usb-linus
+	patches.suse/usb-xhci-pci-Fix-USB2-only-root-hub-registration.patch
 
 	########################################################
 	# end of sorted patches
@@ -99,6 +78,7 @@
 	patches.suse/firmware-qemu_fw_cfg-Do-not-hard-depend-on-CONFIG_HA.patch
 	patches.suse/Revert-fs-make-vfs_fileattr_-get-set-return-EOPNOTSU.patch
 	patches.suse/fs-return-EOPNOTSUPP-from-file_setattr-file_getattr-.patch
+	patches.suse/udp-do-not-use-skb_release_head_state-before-skb_att.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
@@ -157,9 +137,6 @@
 	# ext[2-4]
 
 	# XFS
-
-	# bcachefs
-	patches.suse/bcachefs-print-message-at-mount-time-regarding-immin.patch
 
 	########################################################
 	# Block layer
