--- a/blacklist.conf
+++ b/blacklist.conf
@@ -547,7 +547,7 @@ d613f53c83ec47089c4e25859d5e8e0359f6f8da # CVE-2025-39883 https://bugzilla.suse.
 74792608606a525a0e0df7e8d48acd8000561389 # cleanup, no code change
 a02b0cde8ee515ee0c8efd33e7fbe6830c282e69 # Fix for scripts/gdb
 1071d560afb4c245c2076494226df47db5a35708 # CVE-2025-39940 https://bugzilla.suse.com/show_bug.cgi?id=1251077#c2
-5a2a5b65d5d67279be9e1f0e4b9baf39ee594cb1 # Fix is actually b5eeb8365d196c95dbb0fd0a5b5a69a44832f16f. Unreproduced bug
+5a2a5b65d5d67279be9e1f0e4b9baf39ee594cb1 # Fix is actually b5eeb8365d196c95dbb0fd0a5b5a69a44832f16f. Unreproduced bug on custom ARM
 46e15197b513e60786a44107759d6ca293d6288c # amdgpu: bogus stable 6.12.y backport
 b47a1f9323c2085940599fb292902f27cf2247a1 # amdgpu: bogus stable 6.12.y backport
 711b5875814b2a0e9a5aaf7a85ba7c80f5a389b1 # compile fix only
