--- a/series.conf
+++ b/series.conf
@@ -11564,6 +11564,7 @@
 	patches.suse/i3c-add-missing-include-to-internal-header.patch
 	patches.suse/module-Remove-unnecessary-1-from-last_unloaded_module-name.patch
 	patches.suse/module-Restore-the-moduleparam-prefix-length-check.patch
+	patches.suse/tracing-Remove-unneeded-goto-out-logic.patch
 	patches.suse/kdump-add-crashkernel-cma-suffix.patch
 	patches.suse/kdump-implement-reserve_crashkernel_cma.patch
 	patches.suse/kdump-crashkernel-cma-update-Documentation.patch
