tracing: Remove unneeded goto out logic (bsc#1249286).

--- a/series.conf
+++ b/series.conf
@@ -34020,6 +34020,7 @@
 	patches.suse/i3c-fix-module_i3c_i2c_driver-with-I3C-n.patch
 	patches.suse/module-Remove-unnecessary-1-from-last_unloaded_module-name.patch
 	patches.suse/module-Restore-the-moduleparam-prefix-length-check.patch
+	patches.suse/tracing-Remove-unneeded-goto-out-logic.patch
 	patches.suse/ucount-fix-atomic_long_inc_below-argument-type.patch
 	patches.suse/PCI-pnv_php-Clean-up-allocated-IRQs-on-unplug.patch
 	patches.suse/PCI-pnv_php-Work-around-switches-with-broken-presenc.patch
