--- a/series.conf
+++ b/series.conf
@@ -11563,6 +11563,7 @@
 	patches.suse/i3c-don-t-fail-if-GETHDRCAP-is-unsupported.patch
 	patches.suse/i3c-fix-module_i3c_i2c_driver-with-I3C-n.patch
 	patches.suse/i3c-add-missing-include-to-internal-header.patch
+	patches.suse/module-Prevent-silent-truncation-of-module-name-in-delete_.patch
 	patches.suse/module-Remove-unnecessary-1-from-last_unloaded_module-name.patch
 	patches.suse/module-Restore-the-moduleparam-prefix-length-check.patch
 	patches.suse/tracing-Remove-unneeded-goto-out-logic.patch
