tracing: Correct the refcount if the hist/hist_debug file fails to open (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -31433,6 +31433,7 @@
 	patches.suse/USB-serial-option-add-Telit-Cinterion-FE990B-composi.patch
 	patches.suse/USB-serial-option-fix-Telit-Cinterion-FE990A-name.patch
 	patches.suse/USB-serial-ftdi_sio-add-support-for-Altera-USB-Blast.patch
+	patches.suse/tracing-Correct-the-refcount-if-the-hist-hist_debug-file-f.patch
 	patches.suse/i2c-omap-fix-IRQ-storms.patch
 	patches.suse/i2c-ali1535-Fix-an-error-handling-path-in-ali1535_pr.patch
 	patches.suse/i2c-ali15x3-Fix-an-error-handling-path-in-ali15x3_pr.patch
