--- a/series.conf
+++ b/series.conf
@@ -32000,6 +32000,7 @@
 	patches.suse/selftests-bpf-test-correct-loop_entry-update-in-copy.patch
 	patches.suse/bpf-don-t-do-clean_live_states-when-state-loop_entry.patch
 	patches.suse/selftests-bpf-check-states-pruning-for-deeply-nested.patch
+	patches.suse/bpf-Use-preempt_count-directly-in-bpf_send_signal_common.patch
 	patches.suse/bpf-abort-verification-if-env-cur_state-loop_entry-N.patch
 	patches.suse/bpf-Fix-deadlock-between-rcu_tasks_trace-and-event_m.patch
 	patches.suse/bpf-bpftool-Setting-error-code-in-do_loader.patch
