--- a/series.conf
+++ b/series.conf
@@ -8609,6 +8609,7 @@
 	patches.suse/drm-msm-a6xx-Don-t-let-IB_SIZE-overflow.patch
 	patches.suse/nfs-add-missing-selections-of-CONFIG_CRC32.patch
 	patches.suse/nfsd-decrease-sc_count-directly-if-fail-to-queue-dl_recall.patch
+	patches.suse/ftrace-fix-incorrect-hash-size-in-register_ftrace_direct.patch
 	patches.suse/i2c-atr-Fix-wrong-include.patch
 	patches.suse/i2c-cros-ec-tunnel-defer-probe-if-parent-EC-is-not-p.patch
 	patches.suse/fs-move-the-bdex_statx-call-to-vfs_getattr_nosec.patch
