--- a/series.conf
+++ b/series.conf
@@ -32328,6 +32328,7 @@
 	patches.suse/x86-cpu-amd-Fix-workaround-for-erratum-1054.patch
 	patches.suse/nfs-add-missing-selections-of-CONFIG_CRC32.patch
 	patches.suse/nfsd-decrease-sc_count-directly-if-fail-to-queue-dl_recall.patch
+	patches.suse/ftrace-fix-incorrect-hash-size-in-register_ftrace_direct.patch
 	patches.suse/i2c-cros-ec-tunnel-defer-probe-if-parent-EC-is-not-p.patch
 	patches.suse/ima-process_measurement-needlessly-takes-inode_lock-.patch
 	patches.suse/virtgpu-don-t-reset-on-shutdown.patch
