bpf: Check link_create.flags parameter for multi_kprobe (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32908,6 +32908,7 @@
 	patches.suse/calipso-Don-t-call-calipso-functions-for-AF_INET-sk.patch
 	patches.suse/net-openvswitch-Fix-the-dead-loop-of-MPLS-parse.patch
 	patches.suse/net-phy-mscc-Stop-clearing-the-the-UDPv4-checksum-fo.patch
+	patches.suse/bpf-Check-link_create.flags-parameter-for-multi_kprobe.patch
 	patches.suse/bpf-Check-link_create.flags-parameter-for-multi_uprobe.patch
 	patches.suse/selftests-bpf-Fix-bpf_nf-selftest-failure.patch
 	patches.suse/bpf-fix-ktls-panic-with-sockmap.patch
