--- a/series.conf
+++ b/series.conf
@@ -25800,6 +25800,7 @@
 	patches.suse/x86-cpu-Provide-default-cache-line-size-if-not-enumerated
 	patches.suse/cxl-test-Add-missing-vmalloc.h-for-tools-testing-cxl.patch
 	patches.suse/cxl-region-Fix-memregion-leaks-in-devm_cxl_add_regio.patch
+	patches.suse/tracing-selftests-Fix-kprobe-event-name-test-for-.isra.-fu.patch
 	patches.suse/selftests-futex-pass-_GNU_SOURCE-without-a-value-to-.patch
 	patches.suse/KVM-SVM-WARN-on-vNMI-NMI-window-iff-NMIs-are-outrigh.patch
 	patches.suse/KVM-SEV-ES-Prevent-MSR-access-post-VMSA-encryption.patch
