selftests/tracing: Fix event filter test to retry up to 10 times (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -25802,6 +25802,7 @@
 	patches.suse/cxl-region-Fix-memregion-leaks-in-devm_cxl_add_regio.patch
 	patches.suse/tracing-selftests-Fix-kprobe-event-name-test-for-.isra.-fu.patch
 	patches.suse/selftests-futex-pass-_GNU_SOURCE-without-a-value-to-.patch
+	patches.suse/selftests-tracing-Fix-event-filter-test-to-retry-up-to-10-.patch
 	patches.suse/KVM-SVM-WARN-on-vNMI-NMI-window-iff-NMIs-are-outrigh.patch
 	patches.suse/KVM-SEV-ES-Prevent-MSR-access-post-VMSA-encryption.patch
 	patches.suse/KVM-SEV-ES-Disallow-SEV-ES-guests-when-X86_FEATURE_L.patch
