--- a/series.conf
+++ b/series.conf
@@ -38,6 +38,7 @@
 	patches.rpmify/BTF-Don-t-break-ABI-when-debuginfo-is-disabled.patch
 	patches.rpmify/usrmerge-Adjust-module-path-in-the-kernel-sources.patch
 	patches.rpmify/btf-pahole-j1-option.patch
+	patches.rpmify/power-supply-use-ktime_divns-to-avoid-64-bit-divisio.patch
 
 	########################################################
 	# The sorted section should contain all patches that are
