--- a/series.conf
+++ b/series.conf
@@ -8346,6 +8346,7 @@
 	patches.suse/cgroup-cpuset-Fix-error-handling-in-remote_partition_disable.patch
 	patches.suse/cgroup-cpuset-Don-t-allow-creation-of-local-partition-over.patch
 	patches.suse/cgroup-cpuset-Fix-race-between-newly-created-partition-and.patch
+	patches.suse/tracing-fprobe-events-Fix-possible-UAF-on-modules.patch
 	patches.suse/KVM-s390-Don-t-use-pK-through-tracepoints.patch
 	patches.suse/KVM-s390-Don-t-use-pK-through-debug-printing.patch
 	patches.suse/KVM-x86-Acquire-SRCU-in-KVM_GET_MP_STATE-to-protect-guest-.patch
