tracing: Fix filter string testing (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32331,6 +32331,7 @@
 	patches.suse/nfs-add-missing-selections-of-CONFIG_CRC32.patch
 	patches.suse/nfsd-decrease-sc_count-directly-if-fail-to-queue-dl_recall.patch
 	patches.suse/ftrace-fix-incorrect-hash-size-in-register_ftrace_direct.patch
+	patches.suse/tracing-Fix-filter-string-testing.patch
 	patches.suse/i2c-cros-ec-tunnel-defer-probe-if-parent-EC-is-not-p.patch
 	patches.suse/ima-process_measurement-needlessly-takes-inode_lock-.patch
 	patches.suse/virtgpu-don-t-reset-on-shutdown.patch
