--- a/series.conf
+++ b/series.conf
@@ -11098,6 +11098,7 @@
 	patches.suse/mmc-sdhci-msm-Ensure-SD-card-power-isn-t-ON-when-car.patch
 	patches.suse/Docs-ABI-Fix-sysfs-kernel-address_bits-path.patch
 	patches.suse/lpfc-don-t-use-file-f_path.dentry-for-comparisons.patch
+	patches.suse/selftests-tracing-Fix-false-failure-of-subsystem-event-tes.patch
 	patches.suse/x86-bugs-Avoid-AUTO-after-the-select-step-in-the-retbleed-.patch
 	patches.suse/x86-bugs-Simplify-the-retbleed-stuff-checks.patch
 	patches.suse/x86-bugs-Avoid-warning-when-overriding-return-thunk.patch
