NFSD: Define a proc_layoutcommit for the FlexFiles layout type (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34622,6 +34622,7 @@
 	patches.suse/drm-amd-display-Disable-scaling-on-DCE6-for-now.patch
 	patches.suse/rtc-x1205-Fix-Xicor-X1205-vendor-prefix.patch
 	patches.suse/rtc-optee-fix-memory-leak-on-driver-removal.patch
+	patches.suse/NFSD-Define-a-proc_layoutcommit-for-the-FlexFiles-layout-type.patch
 
 	########################################################
 	# end of sorted patches
