f2fs: fix to mitigate overhead of f2fs_zero_post_eof_page() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -437,6 +437,7 @@
 	patches.kernel.org/6.17.3-365-f2fs-fix-to-update-map-m_next_extent-correctly.patch
 	patches.kernel.org/6.17.3-366-f2fs-fix-to-truncate-first-page-in-error-path-.patch
 	patches.kernel.org/6.17.3-367-f2fs-fix-to-avoid-migrating-empty-section.patch
+	patches.kernel.org/6.17.3-368-f2fs-fix-to-mitigate-overhead-of-f2fs_zero_pos.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
