Bluetooth: ISO: Fix possible UAF on iso_conn_free (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -526,6 +526,7 @@
 	patches.kernel.org/6.17.3-454-net-macb-single-dma_alloc_coherent-for-DMA-des.patch
 	patches.kernel.org/6.17.3-455-Bluetooth-btintel_pcie-Refactor-Device-Coredum.patch
 	patches.kernel.org/6.17.3-456-Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-.patch
+	patches.kernel.org/6.17.3-457-Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_fre.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
