--- a/series.conf
+++ b/series.conf
@@ -159,6 +159,7 @@
 	patches.kernel.org/6.17.3-087-genirq-test-Select-IRQ_DOMAIN.patch
 	patches.kernel.org/6.17.3-088-genirq-test-Depend-on-SPARSE_IRQ.patch
 	patches.kernel.org/6.17.3-089-genirq-test-Drop-CONFIG_GENERIC_IRQ_MIGRATION-.patch
+	patches.kernel.org/6.17.3-090-genirq-test-Ensure-CPU-1-is-online-for-hotplug.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
