i2c: spacemit: check SDA instead of SCL after bus reset (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -272,6 +272,7 @@
 	patches.kernel.org/6.17.3-200-i2c-spacemit-ensure-bus-release-check-runs-whe.patch
 	patches.kernel.org/6.17.3-201-i2c-spacemit-remove-stop-function-to-avoid-bus.patch
 	patches.kernel.org/6.17.3-202-i2c-spacemit-disable-SDA-glitch-fix-to-avoid-r.patch
+	patches.kernel.org/6.17.3-203-i2c-spacemit-check-SDA-instead-of-SCL-after-bu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
