--- a/series.conf
+++ b/series.conf
@@ -392,6 +392,7 @@
 	patches.kernel.org/6.17.3-320-tty-n_gsm-Don-t-block-input-queue-by-waiting-M.patch
 	patches.kernel.org/6.17.3-321-misc-genwqe-Fix-incorrect-cmd-field-being-repo.patch
 	patches.kernel.org/6.17.3-322-pps-fix-warning-in-pps_register_cdev-when-regi.patch
+	patches.kernel.org/6.17.3-323-drm-msm-Fix-obj-leak-in-VM_BIND-error-path.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
