--- a/series.conf
+++ b/series.conf
@@ -407,6 +407,7 @@
 	patches.kernel.org/6.17.3-335-drm-msm-dpu-fix-incorrect-type-for-ret.patch
 	patches.kernel.org/6.17.3-336-wifi-mac80211-fix-reporting-of-all-valid-links.patch
 	patches.kernel.org/6.17.3-337-fs-ntfs3-Fix-integer-overflow-in-run_unpack.patch
+	patches.kernel.org/6.17.3-338-fs-ntfs3-reject-index-allocation-if-BITMAP-is-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
