Revert "net/mlx5e: Update and set Xon/Xoff upon MTU set" (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -550,6 +550,7 @@
 	patches.kernel.org/6.17.3-478-bonding-fix-xfrm-offload-feature-setup-on-acti.patch
 	patches.kernel.org/6.17.3-479-net-enetc-initialize-SW-PIR-and-CIR-based-HW-P.patch
 	patches.kernel.org/6.17.3-480-iommufd-Register-iommufd-mock-devices-with-fws.patch
+	patches.kernel.org/6.17.3-481-Revert-net-mlx5e-Update-and-set-Xon-Xoff-upon-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
