--- a/series.conf
+++ b/series.conf
@@ -174,6 +174,7 @@
 	patches.kernel.org/6.17.3-102-pinctrl-renesas-Use-int-type-to-store-negative.patch
 	patches.kernel.org/6.17.3-103-pinctrl-eswin-Fix-regulator-error-check-and-Kc.patch
 	patches.kernel.org/6.17.3-104-null_blk-Fix-the-description-of-the-cache_size.patch
+	patches.kernel.org/6.17.3-105-blk-throttle-fix-access-race-during-throttle-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
