i2c: spacemit: ensure bus release check runs when wait_bus_idle() fails (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -269,6 +269,7 @@
 	patches.kernel.org/6.17.3-197-thermal-drivers-qcom-Make-LMH-select-QCOM_SCM.patch
 	patches.kernel.org/6.17.3-198-thermal-drivers-qcom-lmh-Add-missing-IRQ-inclu.patch
 	patches.kernel.org/6.17.3-199-i2c-mediatek-fix-potential-incorrect-use-of-I2.patch
+	patches.kernel.org/6.17.3-200-i2c-spacemit-ensure-bus-release-check-runs-whe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
