--- a/series.conf
+++ b/series.conf
@@ -224,6 +224,7 @@
 	patches.kernel.org/6.17.3-152-arm64-dts-allwinner-a527-cubie-a5e-Drop-extern.patch
 	patches.kernel.org/6.17.3-153-arm64-dts-allwinner-t527-avaota-a1-hook-up-ext.patch
 	patches.kernel.org/6.17.3-154-arm64-dts-allwinner-t527-orangepi-4a-hook-up-e.patch
+	patches.kernel.org/6.17.3-155-pwm-tiehrpwm-Don-t-drop-runtime-PM-reference-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
