--- a/series.conf
+++ b/series.conf
@@ -390,6 +390,7 @@
 	patches.kernel.org/6.17.3-318-usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
 	patches.kernel.org/6.17.3-319-usb-gadget-configfs-Correctly-set-use_os_strin.patch
 	patches.kernel.org/6.17.3-320-tty-n_gsm-Don-t-block-input-queue-by-waiting-M.patch
+	patches.kernel.org/6.17.3-321-misc-genwqe-Fix-incorrect-cmd-field-being-repo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
