--- a/series.conf
+++ b/series.conf
@@ -140,6 +140,7 @@
 	patches.kernel.org/6.17.3-068-PCI-MSI-Add-startup-shutdown-for-per-device-do.patch
 	patches.kernel.org/6.17.3-069-irqchip-sg2042-msi-Fix-broken-affinity-setting.patch
 	patches.kernel.org/6.17.3-070-scripts-misc-check-update-export-checks-for-EX.patch
+	patches.kernel.org/6.17.3-071-soc-qcom-rpmh-rsc-Unconditionally-clear-_TRIGG.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
