--- a/series.conf
+++ b/series.conf
@@ -361,6 +361,7 @@
 	patches.kernel.org/6.17.3-289-tcp_metrics-use-dst_dev_net_rcu.patch
 	patches.kernel.org/6.17.3-290-ipv4-start-using-dst_dev_rcu.patch
 	patches.kernel.org/6.17.3-291-crypto-hisilicon-zip-remove-unnecessary-valida.patch
+	patches.kernel.org/6.17.3-292-crypto-hisilicon-re-enable-address-prefetch-af.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
