selftest/futex: Make the error check more precise for futex_numa_mpol (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -245,6 +245,7 @@
 	patches.kernel.org/6.17.3-173-bpf-Explicitly-check-accesses-to-bpf_sock_addr.patch
 	patches.kernel.org/6.17.3-174-mmc-select-REGMAP_MMIO-with-MMC_LOONGSON2.patch
 	patches.kernel.org/6.17.3-175-selftests-futex-Fix-futex_wait-for-32bit-ARM.patch
+	patches.kernel.org/6.17.3-176-selftest-futex-Make-the-error-check-more-preci.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
