--- a/series.conf
+++ b/series.conf
@@ -94,6 +94,7 @@
 	patches.kernel.org/6.17.3-022-powerpc-ftrace-ensure-ftrace-record-ops-are-al.patch
 	patches.kernel.org/6.17.3-023-powerpc64-modules-correctly-iterate-over-stubs.patch
 	patches.kernel.org/6.17.3-024-uprobes-uprobe_warn-should-use-passed-task.patch
+	patches.kernel.org/6.17.3-025-raid6-riscv-Clean-up-unused-header-file-inclus.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
