LoongArch: BPF: Sign-extend struct ops return values properly (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -591,6 +591,7 @@
 	patches.kernel.org/6.17.3-519-dm-fix-NULL-pointer-dereference-in-__dm_suspen.patch
 	patches.kernel.org/6.17.3-520-LoongArch-Automatically-disable-kaslr-if-boot-.patch
 	patches.kernel.org/6.17.3-521-pwm-loongson-Fix-LOONGSON_PWM_FREQ_DEFAULT.patch
+	patches.kernel.org/6.17.3-522-LoongArch-BPF-Sign-extend-struct-ops-return-va.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
