--- a/series.conf
+++ b/series.conf
@@ -597,6 +597,7 @@
 	patches.kernel.org/6.17.3-525-LoongArch-BPF-Make-trampoline-size-stable.patch
 	patches.kernel.org/6.17.3-526-LoongArch-BPF-Make-error-handling-robust-in-ar.patch
 	patches.kernel.org/6.17.3-527-LoongArch-BPF-Remove-duplicated-bpf_flush_icac.patch
+	patches.kernel.org/6.17.3-528-LoongArch-BPF-No-text_poke-for-kernel-text.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
