gfs2: Remove space before newline (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -82,6 +82,7 @@
 	patches.kernel.org/6.17.3-010-kselftest-arm64-gcs-Correctly-check-return-val.patch
 	patches.kernel.org/6.17.3-011-hfsplus-fix-slab-out-of-bounds-read-in-hfsplus.patch
 	patches.kernel.org/6.17.3-012-gfs2-Fix-GLF_INVALIDATE_IN_PROGRESS-flag-clear.patch
+	patches.kernel.org/6.17.3-013-gfs2-Remove-space-before-newline.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
