--- a/series.conf
+++ b/series.conf
@@ -531,6 +531,7 @@
 	patches.kernel.org/6.17.3-459-Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
 	patches.kernel.org/6.17.3-460-Bluetooth-hci_sync-Fix-using-random-address-fo.patch
 	patches.kernel.org/6.17.3-461-KEYS-X.509-Fix-Basic-Constraints-CA-flag-parsi.patch
+	patches.kernel.org/6.17.3-462-hwrng-ks-sa-fix-division-by-zero-in-ks_sa_rng_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
