selftests: arm64: Fix -Waddress warning in tpidr2 test (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -78,6 +78,7 @@
 	patches.kernel.org/6.17.3-006-seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-.patch
 	patches.kernel.org/6.17.3-007-kbuild-Add-missing-objtree-prefix-to-powerpc-c.patch
 	patches.kernel.org/6.17.3-008-selftests-arm64-Check-fread-return-value-in-ex.patch
+	patches.kernel.org/6.17.3-009-selftests-arm64-Fix-Waddress-warning-in-tpidr2.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
