--- a/series.conf
+++ b/series.conf
@@ -154,6 +154,7 @@
 	patches.kernel.org/6.17.3-082-PCI-MSI-Check-MSI_FLAG_PCI_MSI_MASK_PARENT-in-.patch
 	patches.kernel.org/6.17.3-083-block-use-int-to-store-blk_stack_limits-return.patch
 	patches.kernel.org/6.17.3-084-ARM-dts-stm32-stm32mp151c-plyaqm-Use-correct-d.patch
+	patches.kernel.org/6.17.3-085-dt-bindings-vendor-prefixes-Add-undocumented-v.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
