--- a/series.conf
+++ b/series.conf
@@ -588,6 +588,7 @@
 	patches.kernel.org/6.17.3-516-tracing-Fix-tracing_mark_raw_write-to-use-buf-.patch
 	patches.kernel.org/6.17.3-517-tracing-Stop-fortify-string-from-warning-in-tr.patch
 	patches.kernel.org/6.17.3-518-dm-fix-queue-start-stop-imbalance-under-suspen.patch
+	patches.kernel.org/6.17.3-519-dm-fix-NULL-pointer-dereference-in-__dm_suspen.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
