arm64: dts: apple: t600x: Add bluetooth device nodes (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -250,6 +250,7 @@
 	patches.kernel.org/6.17.3-178-bpf-dont-report-verifier-bug-for-missing-bpf_s.patch
 	patches.kernel.org/6.17.3-179-bpf-arm64-Call-bpf_jit_binary_pack_finalize-in.patch
 	patches.kernel.org/6.17.3-180-arm64-dts-apple-t600x-Add-missing-WiFi-propert.patch
+	patches.kernel.org/6.17.3-181-arm64-dts-apple-t600x-Add-bluetooth-device-nod.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
