--- a/series.conf
+++ b/series.conf
@@ -610,6 +610,7 @@
 	patches.kernel.org/6.17.3-538-fbdev-simplefb-Fix-use-after-free-in-simplefb_.patch
 	patches.kernel.org/6.17.3-539-mm-hugetlb-avoid-soft-lockup-when-mprotect-to-.patch
 	patches.kernel.org/6.17.3-540-selftests-mm-skip-soft-dirty-tests-when-CONFIG.patch
+	patches.kernel.org/6.17.3-541-nvdimm-ndtest-Return-ENOMEM-if-devm_kcalloc-fa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
