--- a/series.conf
+++ b/series.conf
@@ -309,6 +309,7 @@
 	patches.kernel.org/6.17.3-237-serial-max310x-Add-error-checking-in-probe.patch
 	patches.kernel.org/6.17.3-238-drm-amd-display-Remove-redundant-semicolons.patch
 	patches.kernel.org/6.17.3-239-drm-amd-display-Add-NULL-pointer-checks-in-dc_.patch
+	patches.kernel.org/6.17.3-240-crypto-keembay-Add-missing-check-after-sg_nent.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
