PCI: endpoint: pci-epf-test: Add NULL check for DMA channels before release (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -620,6 +620,7 @@
 	patches.kernel.org/6.17.3-548-sunrpc-fix-null-pointer-dereference-on-zero-le.patch
 	patches.kernel.org/6.17.3-549-PCI-AER-Avoid-NULL-pointer-dereference-in-aer_.patch
 	patches.kernel.org/6.17.3-550-remoteproc-pru-Fix-potential-NULL-pointer-dere.patch
+	patches.kernel.org/6.17.3-551-PCI-endpoint-pci-epf-test-Add-NULL-check-for-D.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
