--- a/series.conf
+++ b/series.conf
@@ -259,6 +259,7 @@
 	patches.kernel.org/6.17.3-187-power-supply-max77705_charger-use-regfields-fo.patch
 	patches.kernel.org/6.17.3-188-power-supply-max77705_charger-rework-interrupt.patch
 	patches.kernel.org/6.17.3-189-tools-nolibc-make-time_t-robust-if-__kernel_ol.patch
+	patches.kernel.org/6.17.3-190-spi-fix-return-code-when-spi-device-has-too-ma.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
