usb: vhci-hcd: Prevent suspending virtually attached devices (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -509,6 +509,7 @@
 	patches.kernel.org/6.17.3-437-netfilter-nf_conntrack-do-not-skip-entries-in-.patch
 	patches.kernel.org/6.17.3-438-scsi-ufs-core-Fix-data-race-in-CPU-latency-PM-.patch
 	patches.kernel.org/6.17.3-439-scsi-mpt3sas-Fix-crash-in-transport-port-remov.patch
+	patches.kernel.org/6.17.3-440-usb-vhci-hcd-Prevent-suspending-virtually-atta.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
