btrfs: fix symbolic link reading when bs > ps (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -109,6 +109,7 @@
 	patches.kernel.org/6.17.3-037-lsm-CONFIG_LSM-can-depend-on-CONFIG_SECURITY.patch
 	patches.kernel.org/6.17.3-038-cpuset-fix-failure-to-enable-isolated-partitio.patch
 	patches.kernel.org/6.17.3-039-btrfs-return-any-hit-error-from-extent_writepa.patch
+	patches.kernel.org/6.17.3-040-btrfs-fix-symbolic-link-reading-when-bs-ps.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
