--- a/series.conf
+++ b/series.conf
@@ -599,6 +599,7 @@
 	patches.kernel.org/6.17.3-527-LoongArch-BPF-Remove-duplicated-bpf_flush_icac.patch
 	patches.kernel.org/6.17.3-528-LoongArch-BPF-No-text_poke-for-kernel-text.patch
 	patches.kernel.org/6.17.3-529-LoongArch-BPF-Remove-duplicated-flags-check.patch
+	patches.kernel.org/6.17.3-530-LoongArch-BPF-Fix-uninitialized-symbol-retval_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
