wifi: mac80211: consider links for validating SCAN_FLAG_AP in scan request during MLO (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -382,6 +382,7 @@
 	patches.kernel.org/6.17.3-310-wifi-brcmfmac-fix-43752-SDIO-FWVID-incorrectly.patch
 	patches.kernel.org/6.17.3-311-drm-msm-Do-not-validate-SSPP-when-it-is-not-re.patch
 	patches.kernel.org/6.17.3-312-PCI-tegra-Fix-devm_kcalloc-argument-order-for-.patch
+	patches.kernel.org/6.17.3-313-wifi-mac80211-consider-links-for-validating-SC.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
