cpufreq: scmi: Account for malformed DT in scmi_dev_used_by_cpus() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -126,6 +126,7 @@
 	patches.kernel.org/6.17.3-054-s390-bpf-Do-not-write-tail-call-counter-into-h.patch
 	patches.kernel.org/6.17.3-055-s390-bpf-Write-back-tail-call-counter-for-BPF_.patch
 	patches.kernel.org/6.17.3-056-s390-bpf-Write-back-tail-call-counter-for-BPF_.patch
+	patches.kernel.org/6.17.3-057-cpufreq-scmi-Account-for-malformed-DT-in-scmi_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
