--- a/series.conf
+++ b/series.conf
@@ -365,6 +365,7 @@
 	patches.kernel.org/6.17.3-293-crypto-hisilicon-check-the-sva-module-status-w.patch
 	patches.kernel.org/6.17.3-294-crypto-hisilicon-qm-check-whether-the-input-fu.patch
 	patches.kernel.org/6.17.3-295-crypto-hisilicon-qm-request-reserved-interrupt.patch
+	patches.kernel.org/6.17.3-296-inet-ping-check-sock_net-in-ping_get_port-and-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
