--- a/series.conf
+++ b/series.conf
@@ -243,6 +243,7 @@
 	patches.kernel.org/6.17.3-171-selftests-kselftest_harness-Add-harness-selfte.patch
 	patches.kernel.org/6.17.3-172-blk-throttle-fix-throtl_data-leak-during-disk-.patch
 	patches.kernel.org/6.17.3-173-bpf-Explicitly-check-accesses-to-bpf_sock_addr.patch
+	patches.kernel.org/6.17.3-174-mmc-select-REGMAP_MMIO-with-MMC_LOONGSON2.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
