smc: Use __sk_dst_get() and dst_dev_rcu() in in smc_clc_prfx_set() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -447,6 +447,7 @@
 	patches.kernel.org/6.17.3-375-HID-hidraw-tighten-ioctl-command-parsing.patch
 	patches.kernel.org/6.17.3-376-f2fs-fix-zero-sized-extent-for-precache-extent.patch
 	patches.kernel.org/6.17.3-377-smc-Fix-use-after-free-in-__pnet_find_base_nde.patch
+	patches.kernel.org/6.17.3-378-smc-Use-__sk_dst_get-and-dst_dev_rcu-in-in-smc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
