phy: rockchip: naneng-combphy: Enable U3 OTG port for RK3568 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -300,6 +300,7 @@
 	patches.kernel.org/6.17.3-228-wifi-rtw88-Lock-rtwdev-mutex-before-setting-th.patch
 	patches.kernel.org/6.17.3-229-HID-steelseries-refactor-probe-and-remove.patch
 	patches.kernel.org/6.17.3-230-media-zoran-Remove-zoran_fh-structure.patch
+	patches.kernel.org/6.17.3-231-phy-rockchip-naneng-combphy-Enable-U3-OTG-port.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
