drm/amdgpu: Fix vcn v4.0.3 poison irq call trace on sriov guest (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -289,6 +289,7 @@
 	patches.kernel.org/6.17.3-217-drm-panel-novatek-nt35560-Fix-invalid-return-v.patch
 	patches.kernel.org/6.17.3-218-drm-amdgpu-fix-link-error-for-PM_SLEEP.patch
 	patches.kernel.org/6.17.3-219-drm-amdgpu-Fix-jpeg-v4.0.3-poison-irq-call-tra.patch
+	patches.kernel.org/6.17.3-220-drm-amdgpu-Fix-vcn-v4.0.3-poison-irq-call-trac.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
