idpf: fix mismatched free function for dma_alloc_coherent (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -538,6 +538,7 @@
 	patches.kernel.org/6.17.3-466-f2fs-fix-UAF-issue-in-f2fs_merge_page_bio.patch
 	patches.kernel.org/6.17.3-467-mtd-rawnand-atmel-Fix-error-handling-path-in-a.patch
 	patches.kernel.org/6.17.3-468-PCI-j721e-Fix-incorrect-error-message-in-probe.patch
+	patches.kernel.org/6.17.3-469-idpf-fix-mismatched-free-function-for-dma_allo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
