wifi: ath12k: Add fallback for invalid channel number in PHY metadata (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -463,6 +463,7 @@
 	patches.kernel.org/6.17.3-391-wifi-ath12k-fix-signal-in-radiotap-for-WCN7850.patch
 	patches.kernel.org/6.17.3-392-wifi-ath12k-fix-HAL_PHYRX_COMMON_USER_INFO-han.patch
 	patches.kernel.org/6.17.3-393-wifi-ath12k-fix-the-fetching-of-combined-rssi.patch
+	patches.kernel.org/6.17.3-394-wifi-ath12k-Add-fallback-for-invalid-channel-n.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
