--- a/series.conf
+++ b/series.conf
@@ -575,6 +575,7 @@
 	patches.kernel.org/6.17.3-503-ASoC-codecs-wcd937x-make-stub-functions-inline.patch
 	patches.kernel.org/6.17.3-504-ASoC-SOF-ipc4-pcm-fix-delay-calculation-when-D.patch
 	patches.kernel.org/6.17.3-505-ASoC-SOF-ipc4-pcm-fix-start-offset-calculation.patch
+	patches.kernel.org/6.17.3-506-fs-udf-fix-OOB-read-in-lengthAllocDescs-handli.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
