--- a/series.conf
+++ b/series.conf
@@ -149,6 +149,7 @@
 	patches.kernel.org/6.17.3-077-regulator-scmi-Use-int-type-to-store-negative-.patch
 	patches.kernel.org/6.17.3-078-selftests-futex-Fix-some-futex_numa_mpol-subte.patch
 	patches.kernel.org/6.17.3-079-tools-nolibc-avoid-error-in-dup2-if-old-fd-equ.patch
+	patches.kernel.org/6.17.3-080-selftests-nolibc-fix-EXPECT_NZ-macro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
