--- a/series.conf
+++ b/series.conf
@@ -511,6 +511,7 @@
 	patches.kernel.org/6.17.3-439-scsi-mpt3sas-Fix-crash-in-transport-port-remov.patch
 	patches.kernel.org/6.17.3-440-usb-vhci-hcd-Prevent-suspending-virtually-atta.patch
 	patches.kernel.org/6.17.3-441-PCI-rcar-gen4-Add-missing-1ms-delay-after-PWR-.patch
+	patches.kernel.org/6.17.3-442-PCI-rcar-gen4-Assure-reset-occurs-before-DBI-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
