--- a/series.conf
+++ b/series.conf
@@ -424,6 +424,7 @@
 	patches.kernel.org/6.17.3-352-wifi-mt76-mt7996-Fix-mt7996_mcu_sta_ba-wcid-co.patch
 	patches.kernel.org/6.17.3-353-wifi-mt76-mt7996-Fix-mt7996_mcu_bss_mld_tlv-ro.patch
 	patches.kernel.org/6.17.3-354-wifi-mt76-fix-potential-memory-leak-in-mt76_wm.patch
+	patches.kernel.org/6.17.3-355-wifi-mt76-mt7996-Use-proper-link_id-in-link_st.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
