--- a/series.conf
+++ b/series.conf
@@ -569,6 +569,7 @@
 	patches.kernel.org/6.17.3-497-hisi_acc_vfio_pci-Fix-reference-leak-in-hisi_a.patch
 	patches.kernel.org/6.17.3-498-io_uring-waitid-always-prune-wait-queue-entry-.patch
 	patches.kernel.org/6.17.3-499-io_uring-zcrx-fix-overshooting-recv-limit.patch
+	patches.kernel.org/6.17.3-500-ASoC-wcd934x-fix-error-handling-in-wcd934x_cod.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
