selftests: vDSO: vdso_test_abi: Correctly skip whole test with missing vDSO (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -176,6 +176,7 @@
 	patches.kernel.org/6.17.3-104-null_blk-Fix-the-description-of-the-cache_size.patch
 	patches.kernel.org/6.17.3-105-blk-throttle-fix-access-race-during-throttle-p.patch
 	patches.kernel.org/6.17.3-106-selftests-vDSO-Fix-Wunitialized-in-powerpc-VDS.patch
+	patches.kernel.org/6.17.3-107-selftests-vDSO-vdso_test_abi-Correctly-skip-wh.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
