net: enetc: Fix probing error message typo for the ENETCv4 PF driver (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -517,6 +517,7 @@
 	patches.kernel.org/6.17.3-445-iommu-vt-d-Disallow-dirty-tracking-if-incohere.patch
 	patches.kernel.org/6.17.3-446-iommu-selftest-prevent-use-of-uninitialized-va.patch
 	patches.kernel.org/6.17.3-447-RDMA-siw-Always-report-immediate-post-SQ-error.patch
+	patches.kernel.org/6.17.3-448-net-enetc-Fix-probing-error-message-typo-for-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
