remoteproc: pru: Fix potential NULL pointer dereference in pru_rproc_set_ctable() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -619,6 +619,7 @@
 	patches.kernel.org/6.17.3-547-Input-uinput-zero-initialize-uinput_ff_upload_.patch
 	patches.kernel.org/6.17.3-548-sunrpc-fix-null-pointer-dereference-on-zero-le.patch
 	patches.kernel.org/6.17.3-549-PCI-AER-Avoid-NULL-pointer-dereference-in-aer_.patch
+	patches.kernel.org/6.17.3-550-remoteproc-pru-Fix-potential-NULL-pointer-dere.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
