leds: flash: leds-qcom-flash: Update torch current clamp setting (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -122,6 +122,7 @@
 	patches.kernel.org/6.17.3-050-tools-nolibc-fix-error-return-value-of-clock_n.patch
 	patches.kernel.org/6.17.3-051-ARM-dts-renesas-porter-Fix-CAN-pin-group.patch
 	patches.kernel.org/6.17.3-052-leds-max77705-Function-return-instead-of-varia.patch
+	patches.kernel.org/6.17.3-053-leds-flash-leds-qcom-flash-Update-torch-curren.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
