--- a/series.conf
+++ b/series.conf
@@ -359,6 +359,7 @@
 	patches.kernel.org/6.17.3-287-ipv6-use-RCU-in-ip6_output.patch
 	patches.kernel.org/6.17.3-288-net-use-dst_dev_rcu-in-sk_setup_caps.patch
 	patches.kernel.org/6.17.3-289-tcp_metrics-use-dst_dev_net_rcu.patch
+	patches.kernel.org/6.17.3-290-ipv4-start-using-dst_dev_rcu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
