coresight: catu: Support atclk (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -494,6 +494,7 @@
 	patches.kernel.org/6.17.3-422-coresight-fix-indentation-error-in-cscfg_remov.patch
 	patches.kernel.org/6.17.3-423-coresight-etm4x-Conditionally-access-register-.patch
 	patches.kernel.org/6.17.3-424-coresight-tmc-Support-atclk.patch
+	patches.kernel.org/6.17.3-425-coresight-catu-Support-atclk.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
