--- a/series.conf
+++ b/series.conf
@@ -271,6 +271,7 @@
 	patches.kernel.org/6.17.3-199-i2c-mediatek-fix-potential-incorrect-use-of-I2.patch
 	patches.kernel.org/6.17.3-200-i2c-spacemit-ensure-bus-release-check-runs-whe.patch
 	patches.kernel.org/6.17.3-201-i2c-spacemit-remove-stop-function-to-avoid-bus.patch
+	patches.kernel.org/6.17.3-202-i2c-spacemit-disable-SDA-glitch-fix-to-avoid-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
