pwm: tiehrpwm: Fix corner case in clock divisor calculation (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -227,6 +227,7 @@
 	patches.kernel.org/6.17.3-155-pwm-tiehrpwm-Don-t-drop-runtime-PM-reference-i.patch
 	patches.kernel.org/6.17.3-156-pwm-tiehrpwm-Make-code-comment-in-.free-more-u.patch
 	patches.kernel.org/6.17.3-157-pwm-tiehrpwm-Fix-various-off-by-one-errors-in-.patch
+	patches.kernel.org/6.17.3-158-pwm-tiehrpwm-Fix-corner-case-in-clock-divisor-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
