drm/amd/display: Reduce Stack Usage by moving 'audio_output' into 'stream_res' v4 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -285,6 +285,7 @@
 	patches.kernel.org/6.17.3-213-drm-display-bridge-connector-correct-CEC-bridg.patch
 	patches.kernel.org/6.17.3-214-drm-panel-edp-Add-50ms-disable-delay-for-four-.patch
 	patches.kernel.org/6.17.3-215-drm-vmwgfx-fix-missing-assignment-to-ts.patch
+	patches.kernel.org/6.17.3-216-drm-amd-display-Reduce-Stack-Usage-by-moving-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
