--- a/series.conf
+++ b/series.conf
@@ -603,6 +603,7 @@
 	patches.kernel.org/6.17.3-531-mm-ksm-fix-flag-dropping-behavior-in-ksm_madvi.patch
 	patches.kernel.org/6.17.3-532-ksmbd-Fix-race-condition-in-RPC-handle-list-ac.patch
 	patches.kernel.org/6.17.3-533-ksmbd-fix-error-code-overwriting-in-smb2_get_i.patch
+	patches.kernel.org/6.17.3-534-ksmbd-add-max-ip-connections-parameter.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
