libbpf: Fix reuse of DEVMAP (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -118,6 +118,7 @@
 	patches.kernel.org/6.17.3-046-rust-cpumask-Mark-CpumaskVar-as-transparent.patch
 	patches.kernel.org/6.17.3-047-bpf-selftests-Fix-test_tcpnotify_user.patch
 	patches.kernel.org/6.17.3-048-bpf-Remove-migrate_disable-in-kprobe_multi_lin.patch
+	patches.kernel.org/6.17.3-049-libbpf-Fix-reuse-of-DEVMAP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
