remoteproc: qcom: pas: Shutdown lite ADSP DTB on X1E (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -486,6 +486,7 @@
 	patches.kernel.org/6.17.3-414-wifi-rtw89-avoid-circular-locking-dependency-i.patch
 	patches.kernel.org/6.17.3-415-PCI-tegra194-Fix-duplicate-PLL-disable-in-pex_.patch
 	patches.kernel.org/6.17.3-416-remoteproc-qcom-q6v5-Avoid-disabling-handover-.patch
+	patches.kernel.org/6.17.3-417-remoteproc-qcom-pas-Shutdown-lite-ADSP-DTB-on-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
