wifi: mwifiex: send world regulatory domain to driver (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -378,6 +378,7 @@
 	patches.kernel.org/6.17.3-306-drm-amd-pm-Disable-MCLK-switching-with-non-DC-.patch
 	patches.kernel.org/6.17.3-307-drm-amd-pm-Disable-SCLK-switching-on-Oland-wit.patch
 	patches.kernel.org/6.17.3-308-wifi-mac80211-Make-CONNECTION_MONITOR-optional.patch
+	patches.kernel.org/6.17.3-309-wifi-mwifiex-send-world-regulatory-domain-to-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
