--- a/series.conf
+++ b/series.conf
@@ -454,6 +454,7 @@
 	patches.kernel.org/6.17.3-382-mptcp-Call-dst_release-in-mptcp_active_enable.patch
 	patches.kernel.org/6.17.3-383-mptcp-Use-__sk_dst_get-and-dst_dev_rcu-in-mptc.patch
 	patches.kernel.org/6.17.3-384-Revert-usb-xhci-Avoid-Stop-Endpoint-retry-loop.patch
+	patches.kernel.org/6.17.3-385-RDMA-core-Resolve-MAC-of-next-hop-device-witho.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
