--- a/series.conf
+++ b/series.conf
@@ -549,6 +549,7 @@
 	patches.kernel.org/6.17.3-477-smb-client-fix-crypto-buffers-in-non-linear-me.patch
 	patches.kernel.org/6.17.3-478-bonding-fix-xfrm-offload-feature-setup-on-acti.patch
 	patches.kernel.org/6.17.3-479-net-enetc-initialize-SW-PIR-and-CIR-based-HW-P.patch
+	patches.kernel.org/6.17.3-480-iommufd-Register-iommufd-mock-devices-with-fws.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
