LoongArch: BPF: No support of struct argument in trampoline programs (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -592,6 +592,7 @@
 	patches.kernel.org/6.17.3-520-LoongArch-Automatically-disable-kaslr-if-boot-.patch
 	patches.kernel.org/6.17.3-521-pwm-loongson-Fix-LOONGSON_PWM_FREQ_DEFAULT.patch
 	patches.kernel.org/6.17.3-522-LoongArch-BPF-Sign-extend-struct-ops-return-va.patch
+	patches.kernel.org/6.17.3-523-LoongArch-BPF-No-support-of-struct-argument-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
