--- a/series.conf
+++ b/series.conf
@@ -98,6 +98,7 @@
 	patches.kernel.org/6.17.3-026-coresight-trbe-Prevent-overflow-in-PERF_IDX2OF.patch
 	patches.kernel.org/6.17.3-027-perf-arm_spe-Prevent-overflow-in-PERF_IDX2OFF.patch
 	patches.kernel.org/6.17.3-028-erofs-avoid-reading-more-for-fragment-maps.patch
+	patches.kernel.org/6.17.3-029-smb-client-fix-sending-the-iwrap-custom-IRD-OR.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
