--- a/series.conf
+++ b/series.conf
@@ -292,6 +292,7 @@
 	patches.kernel.org/6.17.3-220-drm-amdgpu-Fix-vcn-v4.0.3-poison-irq-call-trac.patch
 	patches.kernel.org/6.17.3-221-PCI-endpoint-pci-ep-msi-Fix-NULL-vs-IS_ERR-che.patch
 	patches.kernel.org/6.17.3-222-PCI-xgene-msi-Return-negative-EINVAL-in-xgene_.patch
+	patches.kernel.org/6.17.3-223-drm-radeon-r600_cs-clean-up-of-dead-code-in-r6.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
