bpf/selftests: Fix test_tcpnotify_user (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -116,6 +116,7 @@
 	patches.kernel.org/6.17.3-044-regmap-Remove-superfluous-check-for-config-in-.patch
 	patches.kernel.org/6.17.3-045-selftests-bpf-Copy-test_kmods-when-installing-.patch
 	patches.kernel.org/6.17.3-046-rust-cpumask-Mark-CpumaskVar-as-transparent.patch
+	patches.kernel.org/6.17.3-047-bpf-selftests-Fix-test_tcpnotify_user.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
