tracing: Fix lock imbalance in s_start() memory allocation failure path (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -580,6 +580,7 @@
 	patches.kernel.org/6.17.3-508-mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
 	patches.kernel.org/6.17.3-509-mfd-intel_soc_pmic_chtdc_ti-Set-use_single_rea.patch
 	patches.kernel.org/6.17.3-510-mfd-vexpress-sysreg-Check-the-return-value-of-.patch
+	patches.kernel.org/6.17.3-511-tracing-Fix-lock-imbalance-in-s_start-memory-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
