--- a/series.conf
+++ b/series.conf
@@ -95,6 +95,7 @@
 	patches.kernel.org/6.17.3-023-powerpc64-modules-correctly-iterate-over-stubs.patch
 	patches.kernel.org/6.17.3-024-uprobes-uprobe_warn-should-use-passed-task.patch
 	patches.kernel.org/6.17.3-025-raid6-riscv-Clean-up-unused-header-file-inclus.patch
+	patches.kernel.org/6.17.3-026-coresight-trbe-Prevent-overflow-in-PERF_IDX2OF.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
