pwm: tiehrpwm: Make code comment in .free() more useful (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -225,6 +225,7 @@
 	patches.kernel.org/6.17.3-153-arm64-dts-allwinner-t527-avaota-a1-hook-up-ext.patch
 	patches.kernel.org/6.17.3-154-arm64-dts-allwinner-t527-orangepi-4a-hook-up-e.patch
 	patches.kernel.org/6.17.3-155-pwm-tiehrpwm-Don-t-drop-runtime-PM-reference-i.patch
+	patches.kernel.org/6.17.3-156-pwm-tiehrpwm-Make-code-comment-in-.free-more-u.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
