--- a/series.conf
+++ b/series.conf
@@ -618,6 +618,7 @@
 	patches.kernel.org/6.17.3-546-Input-atmel_mxt_ts-allow-reset-GPIO-to-sleep.patch
 	patches.kernel.org/6.17.3-547-Input-uinput-zero-initialize-uinput_ff_upload_.patch
 	patches.kernel.org/6.17.3-548-sunrpc-fix-null-pointer-dereference-on-zero-le.patch
+	patches.kernel.org/6.17.3-549-PCI-AER-Avoid-NULL-pointer-dereference-in-aer_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
