drivers/base/node: handle error properly in register_one_node() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -419,6 +419,7 @@
 	patches.kernel.org/6.17.3-347-watchdog-intel_oc_wdt-Do-not-try-to-write-into.patch
 	patches.kernel.org/6.17.3-348-watchdog-mpc8xxx_wdt-Reload-the-watchdog-timer.patch
 	patches.kernel.org/6.17.3-349-PCI-endpoint-pci-epf-test-Fix-doorbell-test-su.patch
+	patches.kernel.org/6.17.3-350-drivers-base-node-handle-error-properly-in-reg.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
