drm/amdgpu: Check vcn state before profile switch (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -349,6 +349,7 @@
 	patches.kernel.org/6.17.3-277-media-st-delta-avoid-excessive-stack-usage.patch
 	patches.kernel.org/6.17.3-278-drm-amdgpu-vcn-Add-regdump-helper-functions.patch
 	patches.kernel.org/6.17.3-279-drm-amdgpu-vcn-Hold-pg_lock-before-vcn-power-o.patch
+	patches.kernel.org/6.17.3-280-drm-amdgpu-Check-vcn-state-before-profile-swit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
