soc: mediatek: mtk-svs: fix device leaks on mt8192 probe failure (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -187,6 +187,7 @@
 	patches.kernel.org/6.17.3-115-firmware-firmware-meson-sm-fix-compile-test-de.patch
 	patches.kernel.org/6.17.3-116-dts-arm-amlogic-fix-pwm-node-for-c3.patch
 	patches.kernel.org/6.17.3-117-soc-mediatek-mtk-svs-fix-device-leaks-on-mt818.patch
+	patches.kernel.org/6.17.3-118-soc-mediatek-mtk-svs-fix-device-leaks-on-mt819.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
