arm64: dts: allwinner: a527: cubie-a5e: Add LEDs (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -220,6 +220,7 @@
 	patches.kernel.org/6.17.3-148-arm64-dts-mediatek-mt7986a-Fix-PCI-Express-T-P.patch
 	patches.kernel.org/6.17.3-149-arm64-dts-mediatek-mt8395-kontron-i1200-Fix-MT.patch
 	patches.kernel.org/6.17.3-150-arm64-dts-mediatek-mt8516-pumpkin-Fix-machine-.patch
+	patches.kernel.org/6.17.3-151-arm64-dts-allwinner-a527-cubie-a5e-Add-LEDs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
