RDMA/mlx5: Fix vport loopback forcing for MPV device (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -335,6 +335,7 @@
 	patches.kernel.org/6.17.3-263-drm-panel-Allow-powering-on-panel-follower-aft.patch
 	patches.kernel.org/6.17.3-264-HID-i2c-hid-Make-elan-touch-controllers-power-.patch
 	patches.kernel.org/6.17.3-265-RDMA-mlx5-Better-estimate-max_qp_wr-to-reflect.patch
+	patches.kernel.org/6.17.3-266-RDMA-mlx5-Fix-vport-loopback-forcing-for-MPV-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
