drm/panel-edp: Add disable to 100ms for MNB601LS1-4 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -281,6 +281,7 @@
 	patches.kernel.org/6.17.3-209-i3c-fix-big-endian-FIFO-transfers.patch
 	patches.kernel.org/6.17.3-210-mfd-max77705-Setup-the-core-driver-as-an-inter.patch
 	patches.kernel.org/6.17.3-211-drm-sched-Fix-a-race-in-DRM_GPU_SCHED_STAT_NO_.patch
+	patches.kernel.org/6.17.3-212-drm-panel-edp-Add-disable-to-100ms-for-MNB601L.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
