PCI/MSI: Add startup/shutdown for per device domains (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -137,6 +137,7 @@
 	patches.kernel.org/6.17.3-065-bpf-Remove-preempt_disable-in-bpf_try_get_buff.patch
 	patches.kernel.org/6.17.3-066-ACPI-processor-idle-Fix-memory-leak-when-regis.patch
 	patches.kernel.org/6.17.3-067-genirq-Add-irq_chip_-startup-shutdown-_parent.patch
+	patches.kernel.org/6.17.3-068-PCI-MSI-Add-startup-shutdown-for-per-device-do.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
