pinctrl: meson-gxl: add missing i2c_d pinmux (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -141,6 +141,7 @@
 	patches.kernel.org/6.17.3-069-irqchip-sg2042-msi-Fix-broken-affinity-setting.patch
 	patches.kernel.org/6.17.3-070-scripts-misc-check-update-export-checks-for-EX.patch
 	patches.kernel.org/6.17.3-071-soc-qcom-rpmh-rsc-Unconditionally-clear-_TRIGG.patch
+	patches.kernel.org/6.17.3-072-pinctrl-meson-gxl-add-missing-i2c_d-pinmux.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
