drm/amdgpu: Fix allocating extra dwords for rings (v2) (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -433,6 +433,7 @@
 	patches.kernel.org/6.17.3-361-wifi-mt76-mt7996-remove-redundant-per-phy-mac8.patch
 	patches.kernel.org/6.17.3-362-ASoC-Intel-hda-sdw-bpt-set-persistent_buffer-f.patch
 	patches.kernel.org/6.17.3-363-srcu-tiny-Remove-preempt_disable-enable-in-src.patch
+	patches.kernel.org/6.17.3-364-drm-amdgpu-Fix-allocating-extra-dwords-for-rin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
